--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -54,8 +54,11 @@ jobs:
         with:
           github_user_name: mdayvson
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            # dist/github-contribution-grid-snake.svg
+            # dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+            dist/github-contribution-grid-snake.svg?palette=github-light
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#1E90FF&color_dots=#161b22,#00458e,#0066d4,#1e90ff,#58a6ff
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
